--- a/LibertyaTrunk/data/JasperReports/ReceptionsVendor.jrxml
+++ b/LibertyaTrunk/data/JasperReports/ReceptionsVendor.jrxml
@@ -532,7 +532,7 @@ WHERE (case when ($P{Estado} = 'P') then porcentaje < 1 else (case when ($P{Esta
 						height="12"
 						key="staticText-81"
 						isRemoveLineWhenBlank="true">
-							<printWhenExpression><![CDATA[new Boolean($P{C_BPartner_ID}.toString() != "")]]></printWhenExpression>
+							<printWhenExpression><![CDATA[new Boolean($P{C_Order_ID}.toString() != "")]]></printWhenExpression>
 						</reportElement>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
 					<textElement>
